# LS_equation_solver

./: .gitignore  CMakeLists.txt  README.md  compile.sh
lib/: V_EFT_LO.h  V_EFT_LO.h.tmp  V_Gauss.h  V_Zero.h  expgaulegmesh.h  gaulegmesh.h  mesh.h  operators.h  plot.h  potential.hpp  riccati.hpp  system.h  system.hpp
run/: main  main2
src/: lseq.cpp  lseq_int.cpp  lseq_matrix.cpp  lseq_root.cpp  main.cpp  main2.cpp  potential.cpp  riccati.cpp  system.cpp
